# lp-0003-private-airdrop

./: .gitignore  .gitlab-ci.yml  Cargo.toml  PLAN.md  README.md  demo.sh  module.json  scaffold.toml
.github/workflows/: ci.yml
basecamp-app/: CMakeLists.txt  metadata.json  resources.qrc
basecamp-app/include/: IComponent.h
basecamp-app/qml/: Main.qml
basecamp-app/src/: Lp0003Component.cpp  Lp0003Component.h
cli/: Cargo.toml
cli/src/: main.rs
consumer-demo/: Cargo.toml
consumer-demo/src/: main.rs
core/: Cargo.toml
core/src/: claim.rs  crypto.rs  lib.rs  merkle.rs  relation.rs  types.rs
core/tests/: relation.rs
docs/: ARCHITECTURE.md  DEMO_VIDEO_SCRIPT.md  FINAL_EVIDENCE_COLLECTION.md  INTEGRATION_GUIDE.md  LIMITATIONS.md  PRIVACY_MODEL.md  PRIVATE_INPUT_TRANSCRIPT_MODEL.md  PROTOCOL.md  REJECTION_RESISTANT_SUBMISSION_PLAN.md  SPEC_COMPLIANCE.md
host/: Cargo.toml
host/src/: lib.rs
interfaces/: lp0003.idl.json  lp0003.spel
lez-program/: Cargo.toml
lez-program/src/: lib.rs
lez-program/tests/: lez_wrapper.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
scripts/: attach-final-demo-video.py  audit-public-transcripts.py  check-prereqs.sh  ci-safe-lane.sh  demo-video.sh  extract-basecamp-load-evidence.py  extract-lez-claim-evidence.py  extract-lez-cost-benchmark.py  extract-proof-benchmark.py  final-publication-check.py  final-recording-preflight.py  package-basecamp-lgx.py  prepare-risc0-proof-artifacts.py  run-risc0-heavy-lane.sh  validate-basecamp-native.py  validate-proof-artifacts.py  validate-submission-readiness.py  validate-upstream-solution.py
sdk/: Cargo.toml
sdk/src/: lib.rs
sdk/tests/: demo.rs
submission/: BASECAMP_LOAD_EVIDENCE.json  BASECAMP_RUNTIME_BOUNDARY.json  BASECAMP_RUNTIME_BOUNDARY.md  FINAL_PUBLICATION_AUDIT.md  LEZ_COST_BENCHMARKS.json  LEZ_RUNTIME_BOUNDARY.json  LEZ_RUNTIME_BOUNDARY.md  LOGOS_TECH_ISSUES.md  PROOF_BENCHMARKS.json  PR_DRAFT.md
submission/claims/: claims-summary.json
submission/proof-artifacts/: claim.journal  claim.receipt  manifest.json
submission/raw-logs/: risc0-final-manifest.txt
tests/: test_basecamp_package.py  test_ci_safe_lane.py  test_cli_and_bench_extractors.py  test_consumer_demo.py  test_cost_benchmark_extractor.py  test_evidence_extractors.py  test_lez_interface.py  test_validators.py
