[package]
name = "lp0003-private-airdrop-host"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
borsh = { version = "1", features = ["derive"] }
hex = "0.4"
lp0003-core = { path = "../core" }
lp0003-private-airdrop-methods = { path = "../methods" }
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
serde_json = "1"
sha2 = "0.10"
