[package]
name = "lp0003-private-airdrop-guest"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "claim_proof"
path = "src/bin/claim_proof.rs"

[dependencies]
borsh = { version = "1", features = ["derive"] }
lp0003-core = { path = "../../core" }
risc0-zkvm = { version = "=3.0.5", default-features = false, features = ["std"] }
